[EzffiX30]: Refractor code